--- a/vmonad.cabal
+++ b/vmonad.cabal
@@ -13,7 +13,7 @@ maintainer:          v.cacciarimiraldo@gmail.com
 build-type:          Simple
 cabal-version:       >=1.10
 
-executable vmonad
+executable xmonad
   main-is:             VMonad.hs
   -- other-modules:       
   -- other-extensions:    
