--- a/vmonad.cabal
+++ b/vmonad.cabal
@@ -13,7 +13,7 @@ maintainer:          v.cacciarimiraldo@gmail.com
 build-type:          Simple
 cabal-version:       >=1.10
 
-executable xmonad
+executable xmonad-x86_64-linux
   main-is:             VMonad.hs
   -- other-modules:       
   -- other-extensions:    
